# programmiersprachen-aufgabe-1

./: CMakeLists.txt
source/: 110.cpp  111.cpp  112.cpp  115.cpp  133.cpp  13lcm.cpp  14beispiel.cpp  15assignmentinitalization.cpp  16definedeclare.cpp  17signatur.cpp  19.cpp  CMakeLists.txt  tests.cpp
