add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)
add_executable(19 19.cpp)
add_executable(110 110.cpp)
add_executable(112 112.cpp)
add_executable(115 115.cpp)
add_executable(133 133.cpp)
# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
